--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "sass-loader": "^13.3.2"
   },
   "dependencies": {
-    "@nuxtjs/router": "^1.7.0"
+    "@nuxtjs/router": "^1.7.0",
+    "@vueuse/core": "^10.2.1",
+    "aos": "^3.0.0-beta.6",
+    "gsap": "^3.12.2"
   }
 }
